--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,7 +30,7 @@ jobs:
         run: python --version
 
       - name: Install dependencies
-        run: python -m pip install numpy pytest glass glass.ext.camb camb
+        run: python -m pip install numpy pytest glass glass.ext.camb camb cosmology.compat.camb 
 
       - name: Run unit tests
         run: python -m pytest --verbose test_glass_cannon
