--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,8 @@ dependencies = [
 version = "0.0.1"
 
 [project.optional-dependencies]
+docs = ["numpydoc", "sphinx", "sphinx-book-theme"]
 test = ["pytest"]
+
+# Install for development
+dev = ["glass_cannon[docs,test"]
