--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ["3.13"]
+        python-version: ["3.12"]
 
     steps:
       - name: Checkout
@@ -30,9 +30,9 @@ jobs:
         run: python --version
 
       - name: Install dependencies
-        run: |
+        run: | 
+          python -m pip install ".[test]"
           python -m pip install git+https://github.com/glass-dev/glass.git
-          python -m pip install numpy pytest glass.ext.camb camb cosmology.compat.camb jax
 
       - name: Run unit tests
         run: python -m pytest --verbose test_glass_cannon
