--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -27,7 +27,7 @@ jobs:
 
 
       - name: Install dependencies
-        run: python -m pip install myst-parser numpy numpydoc sphinx sphinx-book-theme
+        run: python -m pip install ".[docs]"
 
       - name: Build API documentation
         run: |
