--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,8 @@
 name = "glass_cannon"
 readme = "README.md"
 requires-python = ">=3.12"
-authors = [{ "name" = "Samuel Farrens"}, { "name" = "Jen Feron"}, { "name" = "Tobias Russel"}, { "name" = "Gavin Leroy"}, { "name" = "Jade Piat"}]
-maintainers = [{ "name" = "Samuel Farrens"}, { "name" = "Jen Feron"}, { "name" = "Tobias Russel"}, { "name" = "Gavin Leroy"}, { "name" = "Jade Piat"}]
+authors = [{ "name" = "Samuel Farrens"}, { "name" = "Jen Feron"}, { "name" = "Tobias Russell"}, { "name" = "Gavin Leroy"}, { "name" = "Jade Piat"}]
+maintainers = [{ "name" = "Samuel Farrens"}, { "name" = "Jen Feron"}, { "name" = "Tobias Russell"}, { "name" = "Gavin Leroy"}, { "name" = "Jade Piat"}]
 
 description = 'This a cosmology package to infer cosmological parameters from simulated galaxy fields.'
 dependencies = [
