--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build API documentation
         run: |
-          sphinx-apidoc -Mfeo docs/source glass_cannon
+          sphinx-apidoc -Mfeo docs/source src/glass_cannon
           sphinx-build docs/source docs/build
 
       - name: Deploy API documentation
